mdapipkg/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_in_Odoo__c</fullName>
        <description>Field that checks if there is an Odoo Id to use as page filter</description>
        <formula>NOT(ISBLANK( Odoo_ID__c ))</formula>
        <label>Account in Odoo?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Active_Customer__c</fullName>
        <defaultValue>true</defaultValue>
        <description>comes from Odoo - is this an active Odoo Account?</description>
        <label>Active Odoo Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ambition_Future_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ambition/Future plans</inlineHelpText>
        <label>Ambition/Future Plans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Barcode_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Barcode Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brand_Interest__c</fullName>
        <label>Brand Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cent Pur Cent</fullName>
                </value>
                <value>
                    <fullName>i.am.Klean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPC_Scoring__c</fullName>
        <label>CPC Scoring</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                    <default>true</default>
                    <label>B2B</label>
                </value>
                <value>
                    <fullName>B2C</fullName>
                </value>
                <value>
                    <fullName>Divers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Child_Ids__c</fullName>
        <description>Technical Field Integration</description>
        <label>Child Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Support</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_During_Lunchtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Closed During Lunchtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_On__c</fullName>
        <label>Closed On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>maps__AdvRouteDaysOfWeek</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Present__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Competitor Present</label>
        <referenceTo>Customer_Competitor__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Concept_Alignment_with_Brand__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Alignment with the brand&apos;s values, image, and target market</inlineHelpText>
        <label>Concept: Alignment with Brand</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Knowledge_of_Ingredients__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Knowledge of ingredients</inlineHelpText>
        <label>Concept: Knowledge of Ingredients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Opportunity_for_All_Lines__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Opportunity to sell all product lines by IAK (Makeup &amp; Home)</inlineHelpText>
        <label>Concept: Opportunity for All Lines</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Concept_Sustainability__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sustainability initiatives &amp; Eco/Natural brands</inlineHelpText>
        <label>Concept: Sustainability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bpost Bpack 24h Business BE</fullName>
                </value>
                <value>
                    <fullName>Bpost Bpack 24h Pro B2C</fullName>
                </value>
                <value>
                    <fullName>Afhaling door klant</fullName>
                </value>
                <value>
                    <fullName>Afhaling door vertegenwoodiger</fullName>
                </value>
                <value>
                    <fullName>Free delivery charges</fullName>
                </value>
                <value>
                    <fullName>Bpost World Business Nl/GER/FR/LUX</fullName>
                </value>
                <value>
                    <fullName>Bpost World Express Pro</fullName>
                </value>
                <value>
                    <fullName>Verzending</fullName>
                </value>
                <value>
                    <fullName>Standaard</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Store Pickup</fullName>
                </value>
                <value>
                    <fullName>Gratis verzending Mykla</fullName>
                </value>
                <value>
                    <fullName>Verzendkost CB</fullName>
                </value>
                <value>
                    <fullName>Shopify orders Mykla zonder verzending</fullName>
                </value>
                <value>
                    <fullName>Shipping EU</fullName>
                </value>
                <value>
                    <fullName>Shipping NL</fullName>
                </value>
                <value>
                    <fullName>Gratis verzending CB</fullName>
                </value>
                <value>
                    <fullName>Shipping Luxemburg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display__c</fullName>
        <label>Display</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Amount__c</fullName>
        <label>Due Amount</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <description>Technical Field Integration</description>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Customer_Database__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Existing customer database for newsletters or loyalty program members</inlineHelpText>
        <label>Existing Customer Database</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finances_Healthy_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Healthy business</inlineHelpText>
        <label>Finances: Healthy Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoices__c</fullName>
        <label>Invoices</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoicing_Criteria__c</fullName>
        <label>Invoicing Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Factuur per afleveradres</fullName>
                </value>
                <value>
                    <fullName>Factuur per order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Labels__c</fullName>
        <description>Which Brands are sold - comes from the &apos;Labels&apos; field in Odoo</description>
        <inlineHelpText>Which Brands are sold?</inlineHelpText>
        <label>Labels</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loyalty_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loyalty Program</label>
        <referenceTo>Loyalty_Program__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loyalty_Updated_Until__c</fullName>
        <label>Loyalty Updated Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loyaltypoints__c</fullName>
        <label>Loyaltypoints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MKT_Sales_Staff_Trained_in_Makeup__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Staff is trained in makeup techniques (application)</inlineHelpText>
        <label>MKT &amp; Sales: Staff Trained in Makeup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Min_Order_Quantities_Purchase_Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Ability to meet minimum order quantities and honour purchase commitments</inlineHelpText>
        <label>Min Order Quantities + Purchase Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mkt_Sales_Existing_Website_Webshop__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Existing website &amp; Webshop with proper maintenance</inlineHelpText>
        <label>Mkt &amp; Sales: Existing Website &amp; Webshop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mkt_Sales_Opport_Workshops_events__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Opportunities for workshops or events related to the brand</inlineHelpText>
        <label>Mkt &amp; Sales: Opport. Workshops-events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mkt_Sales_Social_Media_Platforms__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Online presence and engagement on social media platforms</inlineHelpText>
        <label>Mkt &amp; Sales: Social Media Platforms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Odoo_ID__c</fullName>
        <externalId>true</externalId>
        <label>Odoo ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Odoo_Parent_Id__c</fullName>
        <description>Technical Field Integration</description>
        <label>Odoo Parent Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Out__c</fullName>
        <label>Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <label>Overdue</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <defaultValue>(&quot;3O Days&quot;)</defaultValue>
        <label>Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Which Price List is relevant for this account</description>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricebook_Brand__c</fullName>
        <formula>TEXT(Price_Book__r.Brand__c)</formula>
        <label>Pricebook Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prime_Location_Medium_High_Foot_Traffic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prime location with medium to high foot traffic (concept stores, flagship stores, perfumeries in retail street, pop-up stores, department stores, beauty salons, city centers)</inlineHelpText>
        <label>Prime Location: Medium-High Foot Traffic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_is_Data_driven__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prospect is data-driven. (Knows his/her numbers and works towards goals)</inlineHelpText>
        <label>Prospect is Data-driven</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SO_Visible_on_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SO Visible on Invoice?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Orders__c</fullName>
        <label>Sales Orders</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sent_to_Odoo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checkbox is true - the integration to Odoo has to be triggered</description>
        <label>Sent to Odoo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Ranking__c</fullName>
        <label>Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ranking</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subchannel__c</fullName>
        <label>Subchannel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pharma</fullName>
                </value>
                <value>
                    <fullName>Beauty</fullName>
                </value>
                <value>
                    <fullName>Divers</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Conceptstore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Status__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National regime</fullName>
                </value>
                <value>
                    <fullName>Intra-Community Regime</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
                <value>
                    <fullName>Co-contracting Regime</fullName>
                </value>
                <value>
                    <fullName>Vrijgesteld van BTW</fullName>
                </value>
                <value>
                    <fullName>Intercompany (voor GB-rek)</fullName>
                </value>
                <value>
                    <fullName>Eigen company (voor GB rek)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <inlineHelpText>To be sent to Odoo, make sure this is a valid VAT number, in format BE0123456789</inlineHelpText>
        <label>VAT Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webshop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Webshop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cent Pur Cent</fullName>
                </value>
                <value>
                    <fullName>I.am.Klean</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Willing_Training_Staff_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Willingness to receive training or invest in staff development</inlineHelpText>
        <label>Willing Training + Staff Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Willing_to_Learn__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Willingness to learn about ingredients/techniques etc… (Rigorgeous days/Blush)</inlineHelpText>
        <label>Willing to Learn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Window_Display_Product_Showcasing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Window display options and opportunities for showcasing the brand&apos;s products</inlineHelpText>
        <label>Window Display + Product Showcasing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yearly_Opportunity_Added__c</fullName>
        <description>Field that indicates for which year the last yearly oppty was added</description>
        <label>Yearly Opportunity Added</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Active_Customer__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Brand_Interest__c</columns>
        <columns>Price_Book__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Competitors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Active_Customer__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Competitor</value>
        </filters>
        <label>Competitors</label>
    </listViews>
    <listViews>
        <fullName>Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Active_Customer__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Brand_Interest__c</columns>
        <columns>Labels__c</columns>
        <columns>Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>Customers</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Active_Customer__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Shipping_Ranking__c</columns>
        <columns>Sales_Orders__c</columns>
        <columns>Sales_Person__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Active_Customer__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Labels__c</columns>
        <columns>Sales_Person__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>My Customers</label>
    </listViews>
    <listViews>
        <fullName>Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Active_Customer__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <label>Prospects</label>
    </listViews>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <label>Prospect</label>
    </recordTypes>
</CustomObject>